# OpenKobe

./: README.md  audio_module.py  chatgpt_module.py  greeting_module.py  pyproject.toml  run.py  text_speech_module.py
api-keys/: elabapikey.txt  openaiapikey2.txt
dev_scripts/: post_install.sh  pre_install.sh
history-files/: history.txt  user.txt
openhome/: LLM.py  app_globals.py  config.yaml  conversation_manager.py  main.py  personalities_manager.py  process_user_message.py  sound_creator.py  utility.py
openhome/capabilities/: capabilities.json  capabilities_manager.py  pause_for_10_seconds.py  play_music.py
openhome/history_files/: history.json  history_manager.py  recent_history.json  user_memory_manager.py
openhome/personalities/: current_mood.json  mood.json  mood_evolver.py  mood_evolving_instruction.txt  personalities.json  yoga.txt
openhome/voice_input_output/: loading_sounds.py  text_to_voice.py  voice_to_text.py
personalities/: Activated.txt
